--- a/style/scss/abstracts/_mixins.scss
+++ b/style/scss/abstracts/_mixins.scss
@@ -2,7 +2,7 @@
 	font-family: 'Golos Text', sans-serif;
 	font-weight: 500;
 	line-height: 100%;
-	letter-spacing: -0.04;
+	letter-spacing: -0.04em;
 }
 
 @mixin text {
