--- a/style/scss/sections/_sticker.scss
+++ b/style/scss/sections/_sticker.scss
@@ -5,7 +5,7 @@
 	margin: 100px $spacing-xxxl-desktop;
 	padding: $spacing-xl-desktop;
 	background-color: $primary;
-	background-image: url('../../image/sticker/sticker-background.jpg');
+	background-image: url('../../image/sticker/sticker-background.webp');
 	background-size: cover;
 	background-position: center;
 	background-repeat: no-repeat;
